# Flux-RSS-Topic-Modeling

./: -remote --tags origin  .gitignore  .gitlab-ci.yml  README.md  analyzer.py  analyzers.py  datastructures.py  demo_stanza.py  journal.md  journal_s3.md  journal_s4.md  journal_s8.md  journal_s9.md  pyproject.toml  rss_feedparser.py  rss_parcours.py  rss_reader.py  run_bertopic.py  run_lda.py  test.json
corpus/: .~ast -- articles.xml  Blast -- articles.xml  Blast -- emissions.xml  Elucid -.xml  Flux RSS - BFM BUSINESS - Emploi - Vie de Bureau.xml  Flux RSS - BFM BUSINESS - Emploi.xml  Flux RSS - BFM BUSINESS – Economie &amp; Social.xml  Flux RSS - BFM CRYPTO - Toute l’actualité de la crypto.xml  Flux RSS - BFM PATRIMOINE - Immobilier.xml  Flux RSS - BFM PATRIMOINE - Impôts &amp; Fiscalité.xml  Flux RSS - BFM PATRIMOINE - Placements &amp; Epargne.xml  Flux RSS - BFM PATRIMOINE - Retraite.xml  Flux RSS - BFM PATRIMOINE - Succession.xml  Flux RSS - BFM PATRIMOINE - Tous les conseils pour gérer votre argent..xml  Flux RSS - BFM Tech - Culture Web.xml  Flux RSS - BFM Tech - Nouveautés Produits.xml  Flux RSS - BFM Tech - Toutes l&#39;actualité.xml  Flux RSS - BFMTV - Afrique.xml  Flux RSS - BFMTV - Amérique Latine.xml  Flux RSS - BFMTV - Amérique du Nord.xml  Flux RSS - BFMTV - Asie.xml  Flux RSS - BFMTV - Europe.xml  Flux RSS - BFMTV - Metz.xml  Flux RSS - BFMTV - Montpellier.xml  Flux RSS - BFMTV - Moyen-Orient.xml  Flux RSS - BFMTV - Météo - Intempéries.xml  Flux RSS - BFMTV - Météo - Neige.xml  Flux RSS - BFMTV - Météo Témoins.xml  Flux RSS - BFMTV - Océanie.xml  (+43 more)
(+12 files in other folders)
