[project]
name = "projet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "feedparser>=6.0.12",
    "gensim>=4.4.0",
    "nltk>=3.9.4",
    "smart-open[all]>=7.5.1",
    "trankit",
]

[tool.uv.sources]
trankit = { git = "https://github.com/pmagistry/trankit.git" }
